--- a/alpine-rdp:xfce4/Containerfile
+++ b/alpine-rdp:xfce4/Containerfile
@@ -9,9 +9,14 @@ RUN echo 'export LC_ALL=en_GB.UTF-8' >> /etc/profile.d/locale.sh && \
 RUN echo 'export LC_ALL=it_IT.UTF-8' >> /etc/profile.d/locale.sh && \
   sed -i 's|LANG=C.UTF-8|LANG=it_IT.UTF-8|' /etc/profile.d/locale.sh
 
-RUN apk add bash xrdp xorgxrdp xorg-server xfce4 faenza-icon-theme xfce4-terminal firefox
-RUN echo startxfce4 > /etc/X11/xinit/xinitrc.d/xfce4
+RUN apk add openssh bash xrdp xorgxrdp xorg-server xfce4 \
+  faenza-icon-theme xfce4-terminal firefox
+
+RUN echo -e "#!/bin/sh\nexec startxfce4" > /etc/X11/xinit/xinitrc.d/xfce4
+RUN chmod +x /etc/X11/xinit/xinitrc.d/xfce4
 
 RUN echo -e "rdesktop\nrdesktop" | passwd
 
-CMD ["/bin/bash", "-c", "xrdp-sesman;xrdp --nodaemon"]
+COPY ./rdpstart.sh /usr/local/bin/rdpstart
+RUN chmod +x /usr/local/bin/rdpstart
+ENTRYPOINT /usr/local/bin/rdpstart
