--- a/alpine-rdp:xfce4/Containerfile
+++ b/alpine-rdp:xfce4/Containerfile
@@ -17,6 +17,6 @@ RUN chmod +x /etc/X11/xinit/xinitrc.d/xfce4
 
 RUN echo -e "rdesktop\nrdesktop" | passwd
 
-COPY ./rdpstart.sh /usr/local/bin/rdpstart
-RUN chmod +x /usr/local/bin/rdpstart
-ENTRYPOINT /usr/local/bin/rdpstart
+COPY ./ct-entrypoint.sh /usr/local/bin/ct-entrypoint
+RUN chmod +x /usr/local/bin/ct-entrypoint
+ENTRYPOINT /usr/local/bin/ct-entrypoint
