RDP Containers now expose port 3389

--- a/alpine-rdp:xfce4/Containerfile
+++ b/alpine-rdp:xfce4/Containerfile
@@ -19,5 +19,5 @@ COPY ./ct-entrypoint.sh /usr/local/bin/ct-entrypoint
 RUN chmod +x /usr/local/bin/ct-entrypoint
 
 USER default
-
+EXPOSE 3389
 ENTRYPOINT /usr/local/bin/ct-entrypoint
