Containers expose RDP port 3398

--- a/alpine-rdp:openbox/Containerfile
+++ b/alpine-rdp:openbox/Containerfile
@@ -21,5 +21,5 @@ COPY ./ct-entrypoint.sh /usr/local/bin/ct-entrypoint
 RUN chmod +x /usr/local/bin/ct-entrypoint
 
 USER default
-EXPOSE 3389
+EXPOSE 3389/tcp
 ENTRYPOINT /usr/local/bin/ct-entrypoint
