--- a/alpine-rdp:xfce4/Containerfile
+++ b/alpine-rdp:xfce4/Containerfile
@@ -6,7 +6,7 @@ RUN apk add --no-cache --update musl musl-utils musl-locales tzdata
 RUN echo 'export LC_ALL=it_IT.UTF-8' >> /etc/profile.d/locale.sh && \
   sed -i 's|LANG=C.UTF-8|LANG=it_IT.UTF-8|' /etc/profile.d/locale.sh
 
-RUN apk add --no-cache openssh bash xrdp xorgxrdp xorg-server xfce4 \
+RUN apk add --no-cache openssh xrdp xorgxrdp xorg-server xfce4 \
   faenza-icon-theme xfce4-terminal firefox sudo
 
 RUN echo -e "#!/bin/sh\nexec startxfce4" > /etc/X11/xinit/xinitrc.d/xfce4
