--- a/alpine-rdp:openbox/Containerfile
+++ b/alpine-rdp:openbox/Containerfile
@@ -7,7 +7,7 @@ RUN echo 'export LC_ALL=it_IT.UTF-8' >> /etc/profile.d/locale.sh && \
   sed -i 's|LANG=C.UTF-8|LANG=it_IT.UTF-8|' /etc/profile.d/locale.sh
 
 RUN apk add --no-cache openssh xrdp xorgxrdp xorg-server adwaita-icon-theme\
-  xfce4-terminal firefox openbox thunar font-dejavu sudo
+  xfce4-terminal feh firefox openbox thunar font-dejavu sudo
 
 RUN echo -e "#!/bin/sh\nexec openbox-session" > /etc/X11/xinit/xinitrc.d/openbox
 RUN chmod +x /etc/X11/xinit/xinitrc.d/openbox
@@ -20,7 +20,7 @@ RUN chmod +x /usr/local/bin/ct-entrypoint
 
 USER default
 RUN mkdir -p /home/default/.config/
-COPY ./openbox /home/default/.config/openbox/
+COPY --chown=default ./openbox /home/default/.config/openbox/
 
 EXPOSE 3389/tcp
 ENTRYPOINT /usr/local/bin/ct-entrypoint
