--- a/alpine-rdp:openbox/Containerfile
+++ b/alpine-rdp:openbox/Containerfile
@@ -4,7 +4,8 @@ RUN apk update
 RUN apk add --no-cache --update musl musl-utils musl-locales tzdata
 
 RUN echo 'export LC_ALL=it_IT.UTF-8' >> /etc/profile.d/locale.sh && \
-  sed -i 's|LANG=C.UTF-8|LANG=it_IT.UTF-8|' /etc/profile.d/locale.sh
+  sed -i 's|LANG=C.UTF-8|LANG=it_IT.UTF-8|' /etc/profile.d/locale.sh && \
+  ln -s /usr/share/zoneinfo/Europe/Rome /etc/localtime
 
 RUN apk add --no-cache openssh xrdp xorgxrdp xorg-server adwaita-icon-theme\
   xfce4-terminal feh tint2 firefox openbox thunar font-dejavu nano sudo
