--- a/alpine-rdp:xfce4/Containerfile
+++ b/alpine-rdp:xfce4/Containerfile
@@ -8,7 +8,7 @@ RUN echo 'export LC_ALL=it_IT.UTF-8' >> /etc/profile.d/locale.sh && \
   ln -s /usr/share/zoneinfo/Europe/Rome /etc/localtime
 
 RUN apk add --no-cache openssh xrdp xorgxrdp xorg-server xfce4 \
-  faenza-icon-theme xfce4-terminal firefox sudo
+  faenza-icon-theme xfce4-terminal firefox nano sudo
 
 RUN echo -e "#!/bin/sh\nexec startxfce4" > /etc/X11/xinit/xinitrc.d/xfce4
 RUN chmod +x /etc/X11/xinit/xinitrc.d/xfce4
