--- a/disopy-ffmpeg/Containerfile
+++ b/disopy-ffmpeg/Containerfile
@@ -9,8 +9,7 @@ RUN pip install --no-cache-dir disopy
 RUN useradd -u 1000 -m default
 
 RUN mkdir -p /home/default/.config/disopy
-COPY ./config.json /home/default/.config/disopy/disopy.json
-RUN chown -R default:default /home/default/
+COPY --chown=default ./config.json /home/default/.config/disopy/disopy.json
 
 USER default
 WORKDIR /home/default
