NVIDIA build-arg and default environment vars

--- a/wine-ge-custom/Containerfile
+++ b/wine-ge-custom/Containerfile
@@ -1,9 +1,12 @@
 FROM docker.io/archlinux:base-devel
 
+ARG NVIDIA 0
+
 RUN echo -e "[multilib]\nInclude = /etc/pacman.d/mirrorlist" | tee -a /etc/pacman.conf && \
     pacman-key --init && \
-    pacman -Syyu --noconfirm sudo git mesa-utils lib32-mesa-utils wireplumber \
-        pipewire pipewire-alsa alsa-utils lib32-pipewire lib32-gnutls wine winetricks
+    pacman -Syyu --noconfirm sudo git mesa-utils lib32-mesa-utils mangohud lib32-mangohud \
+        wireplumber pipewire pipewire-alsa alsa-utils lib32-pipewire lib32-gnutls wine winetricks && \
+    if [ $NVIDIA -eq 1 ]; then pacman -Syyu --noconfirm nvidia-utils lib32-nvidia-utils; fi
 
 RUN useradd -u 1000 -m default && \
     echo "default ALL=NOPASSWD:ALL" > /etc/sudoers.d/default && \
@@ -12,6 +15,11 @@ RUN useradd -u 1000 -m default && \
 
 COPY ./ct-entrypoint.sh /usr/local/bin/ct-entrypoint
 RUN chmod +x /usr/local/bin/ct-entrypoint
+
+COPY ./ct-winesetup.sh /usr/local/bin/ct-winesetup
+RUN chmod +x /usr/local/bin/ct-winesetup
+
+COPY ./config/* /etc/
 
 USER default
 
@@ -30,15 +38,34 @@ RUN cd && \
     rm -fr dxvk-bin
 
 RUN cd && \
+    git clone https://aur.archlinux.org/dxvk-nvapi-mingw.git && \
+    cd dxvk-nvapi-mingw && \
+    makepkg -si --noconfirm --needed --rmdeps --clean && \
+    cd && \
+    rm -fr dxvk-nvapi-mingw
+
+RUN cd && \
     git clone https://aur.archlinux.org/vkd3d-proton-bin.git && \
     cd vkd3d-proton-bin && \
     makepkg -si --noconfirm --needed --rmdeps --clean && \
     cd && \
     rm -fr vkd3d-proton-bin
 
+
 RUN sudo pacman -Scc --noconfirm
 
+ENV NVIDIA $NVIDIA
+ENV PATH /opt/wine-ge-custom/bin:$PATH
 ENV XDG_RUNTIME_DIR /run/user/1000
+ENV WINEPREFIX /games/defaultprefix
+ENV DXVK_NVAPI_LOG_LEVEL none
+ENV DXVK_ENABLE_NVAPI=1
+ENV WINEDLLOVERRIDES dxgi,nvapi64=n
+ENV VKD3D_CONFIG dxr11
+ENV DXVK_CONFIG_FILE /etc/dxvk.conf
+ENV MANGOHUD_CONFIGFILE /etc/mangohud.conf
+ENV MANGOHUD 1
+
 WORKDIR /games
 VOLUME /home/default
 VOLUME /games
