--- a/alpine-rdp:openbox/Containerfile
+++ b/alpine-rdp:openbox/Containerfile
@@ -1,20 +1,19 @@
 FROM docker.io/alpine:latest
 
 RUN apk update && \
-    apk add --no-cache --update musl musl-utils musl-locales tzdata
-
-RUN echo 'export LC_ALL=it_IT.UTF-8' >> /etc/profile.d/locale.sh && \
+    apk add --no-cache --update musl musl-utils musl-locales tzdata && \
+    echo 'export LC_ALL=it_IT.UTF-8' >> /etc/profile.d/locale.sh && \
     sed -i 's|LANG=C.UTF-8|LANG=it_IT.UTF-8|' /etc/profile.d/locale.sh && \
     ln -s /usr/share/zoneinfo/Europe/Rome /etc/localtime
 
-RUN apk add --no-cache openssh xrdp xorgxrdp xorg-server adwaita-icon-theme\
-        xfce4-terminal feh tint2 firefox openbox thunar font-dejavu nano sudo
-
-RUN echo -e "#!/bin/sh\nexec openbox-session" > /etc/X11/xinit/xinitrc.d/openbox && \
+RUN apk add --no-cache openssh xrdp xorgxrdp xorg-server adwaita-icon-theme \
+        xfce4-terminal feh tint2 firefox openbox thunar font-dejavu nano sudo && \
+    echo -e "#!/bin/sh\nexec openbox-session" > /etc/X11/xinit/xinitrc.d/openbox && \
     chmod +x /etc/X11/xinit/xinitrc.d/openbox
 
-RUN echo -e "alpinerdp\nalpinerdp" | adduser -u 1000 default && \
-    echo "default ALL=NOPASSWD:ALL" > /etc/sudoers.d/default
+RUN adduser -D -u 1000 default && \
+    echo "default ALL=NOPASSWD:ALL" > /etc/sudoers.d/default && \
+    install -o default -g default -d /var/log/user/1000
 
 COPY ./ct-entrypoint.sh /usr/local/bin/ct-entrypoint
 RUN chmod +x /usr/local/bin/ct-entrypoint
@@ -23,6 +22,7 @@ USER default
 WORKDIR /home/default
 
 COPY --chown=default ./openbox /home/default/.config/openbox/
+COPY --chown=default ./xrdp /home/default/.config/xrdp/
 RUN mkdir -p .themes && \
     tar -xzvf .config/openbox/Black.obt -C .themes/
 
