--- a/alpine-rdp:xfce4/Containerfile
+++ b/alpine-rdp:xfce4/Containerfile
@@ -11,7 +11,7 @@ RUN apk add --no-cache openssh xrdp xorgxrdp xorg-server xfce4 \
     echo -e "#!/bin/sh\nexec startxfce4" > /etc/X11/xinit/xinitrc.d/xfce4 && \
     chmod +x /etc/X11/xinit/xinitrc.d/xfce4
 
-RUN echo -e "alpinerdp\nalpinerdp" | adduser -u 1000 default && \
+RUN adduser -D -u 1000 default && \
     echo "default ALL=NOPASSWD:ALL" > /etc/sudoers.d/default
 
 COPY ./ct-entrypoint.sh /usr/local/bin/ct-entrypoint
