--- a/.github/workflows/webnut-custom.yml
+++ b/.github/workflows/webnut-custom.yml
@@ -27,8 +27,12 @@ jobs:
 
     # Step 3: Build the image
     - name: Build the Docker image
-      run: cd webnut-custom && docker build -t ghcr.io/${{ github.repository }}/webnut:latest . --file Containerfile
+      run: |
+        REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+        cd webnut-custom && docker build -t ghcr.io/$REPO_NAME/webnut:latest . --file Containerfile
 
     # Step 4: Push the Docker image
     - name: Push Docker Image
-      run: docker push ghcr.io/${{ github.repository }}/webnut:latest
+      run: |
+        REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
+        docker push ghcr.io/$REPO_NAME/webnut:latest
