--- a/.github/workflows/webnut-custom.yml
+++ b/.github/workflows/webnut-custom.yml
@@ -28,11 +28,9 @@ jobs:
     # Step 3: Build the image
     - name: Build the Docker image
       run: |
-        REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-        cd webnut-custom && docker build -t ghcr.io/$REPO_NAME/webnut:latest . --file Containerfile
+        cd webnut-custom && docker build -t ghcr.io/${{ github.actor }}/webnut:latest . --file Containerfile
 
     # Step 4: Push the Docker image
     - name: Push Docker Image
       run: |
-        REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
-        docker push ghcr.io/$REPO_NAME/webnut:latest
+        docker push ghcr.io/${{ github.actor }}/webnut:latest
