--- a/.github/workflows/disopy-ffmpeg.yml
+++ b/.github/workflows/disopy-ffmpeg.yml
@@ -2,9 +2,19 @@ name: disopy-ffmpeg
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - "master"
+    paths:
+      - disopy-ffmpeg/**
+    paths-ignore:
+      - disopy-ffmpeg/README.md
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - "master"
+    paths:
+      - disopy-ffmpeg/**
+    paths-ignore:
+      - disopy-ffmpeg/README.md
 
 jobs:
 
