--- a/.github/workflows/webnut-custom.yml
+++ b/.github/workflows/webnut-custom.yml
@@ -2,9 +2,19 @@ name: webnut-custom
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
+    paths:
+      - webnut-custom/**
+    paths-ignore:
+      - webnut-custom/README.md
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
+    paths:
+      - webnut-custom/**
+    paths-ignore:
+      - webnut-custom/README.md
 
 jobs:
 
