--- a/.github/workflows/disopy-ffmpeg.yml
+++ b/.github/workflows/disopy-ffmpeg.yml
@@ -3,14 +3,14 @@ name: disopy-ffmpeg
 on:
   push:
     branches:
-      - "master"
+      - master
     paths:
       - disopy-ffmpeg/**
     paths-ignore:
       - disopy-ffmpeg/README.md
   pull_request:
     branches:
-      - "master"
+      - master
     paths:
       - disopy-ffmpeg/**
     paths-ignore:
