Update and rename disopy-ffmpeg.yml to disopy.yml

--- a/.github/workflows/disopy.yml
+++ b/.github/workflows/disopy.yml
@@ -1,20 +1,18 @@
-name: disopy-ffmpeg
+name: disopy
 
 on:
   push:
     branches:
       - master
     paths:
-      - disopy-ffmpeg/**
-    paths-ignore:
-      - disopy-ffmpeg/README.md
+      - disopy/**
+      - '!disopy/README.md'
   pull_request:
     branches:
       - master
     paths:
-      - disopy-ffmpeg/**
-    paths-ignore:
-      - disopy-ffmpeg/README.md
+      - disopy/**
+      - '!disopy/README.md'
 
 jobs:
 
@@ -39,7 +37,7 @@ jobs:
     - name: Build the Docker image
       run: |
         REPO_NAME=$(echo "${{ github.actor }}" | tr '[:upper:]' '[:lower:]')
-        cd disopy-ffmpeg && docker build -t ghcr.io/$REPO_NAME/disopy:latest . --file Containerfile
+        cd disopy && docker build -t ghcr.io/$REPO_NAME/disopy:latest . --file Containerfile
 
     # Step 4: Push the Docker image
     - name: Push Docker Image
